--- a/Destiny2.html
+++ b/Destiny2.html
@@ -35,7 +35,7 @@
 
             <div class="projekt_tekst"><h2>Minu kolmandas projektis pidi meie grupp aitama teha lõpukursuslasel lõputööd. Projekti käigus sai ta natukene edasi kuid enamjaolt ta ülesandeid ei andnud ja seetõttu toimetasid kõik enamusajast omi asju</h2></div>
 
-            <h1 style="color: white;text-align: center;margin-top: 25%;font-size: 36px;">Lingid:</h1>
+            <h1 class="links">Lingid:</h1>
 
             <a class="lingid" href="https://rainis-destiny.netlify.app/"><h2>veebileht</h2></a>
             <a class="lingid" href="https://github.com/Kristanna/destiny_2"><h2>GitHub</h2></a>
