--- a/Kaprametall.html
+++ b/Kaprametall.html
@@ -37,7 +37,7 @@
 
             <h1 style="color: white;text-align: center;margin-top: 10%;">Projekt hetkel pooleli</h1>
 
-            <h1 style="color: white;text-align: center;margin-top: 25%;font-size: 36px;">Lingid:</h1>
+            <h1 class="links">Lingid:</h1>
 
             <a class="lingid" href="https://matu16.github.io/Kapra-vanametall/"><h2>veebileht</h2></a>
             <a class="lingid" href="https://github.com/Matu16/Kapra-vanametall"><h2>GitHub</h2></a>
