--- a/SydMead.html
+++ b/SydMead.html
@@ -20,7 +20,7 @@
             </div>
     
             <div class="header_pealkiri">
-                <h3">Destiny 2 BOT</h3>
+                <h3">Portfoolio: Syd Mead</h3>
             </div>
     
             <div class="header_nupud">
@@ -36,7 +36,7 @@
 
             <div class="projekt_tekst"><h2>Minu esimene kooli tarkvaraarendus õpilaste ühisprojektil tegime portfoolio Syd Meadist. Lehekülg läks grupi väheste teadmiste tõttu halvasti aga viiamsel päeval saime enamvähem korda ja esitatud</h2></div>
 
-            <h1 style="color: white;text-align: center;margin-top: 25%;font-size: 36px;">Lingid:</h1>
+            <h1 class="links">Lingid:</h1>
 
             <a class="lingid" href="https://projekt4.ta20pajuniit.itmajakas.ee/"><h2>veebileht</h2></a>
             <a class="lingid" href="https://github.com/Metsaline/portfolio_projekt_4"><h2>GitHub</h2></a>
