--- a/andmebaasid.html
+++ b/andmebaasid.html
@@ -36,7 +36,7 @@
 
             <div class="projekt_tekst"><h2>Enda teisel projektil pidime koostama andmebaaside mudeli enda valitud lehest/äpist või ise välja mõtlema uue. Meie valikuks oli twitch aga lihtsustatud versioonil</h2></div>
 
-            <h1 style="color: white;text-align: center;margin-top: 25%;font-size: 36px;">Lingid:</h1>
+            <h1 class="links">Lingid:</h1>
 
             <a class="lingid" href="https://liisikuuskull.atlassian.net/jira/software/projects/VX2022/boards/1/backlog?selectedIssue=VX2022-1"><h2>Jira</h2></a>
             <a class="lingid" href="https://github.com/karlerik100/2022-PROJEKT-nr-5"><h2>GitHub</h2></a>
