--- a/projektid.html
+++ b/projektid.html
@@ -44,7 +44,7 @@
 
 
 
-            <h2 style="color: white;text-align: center;margin-top: 15%;">Firmade Veebilehed</h2>
+            <h2 class="links">Firmade Veebilehed</h2>
 
             <a class="projekt" href="Kaprametall.html"><h2>Kapra Vanametall OÜ</h2></a>
 
