--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
         <div class="mina1">
             <h3 style="color: white;">Kes ma olen</h3>
-            <div class="mina1_tekst"><h2>Minu nimi on Marten Saar, olen 16 aastane, <br> elan Saaremaal, 
-                õpin Kuressaare Ametikoolis <br> esimese kursuse õpilasena noorem tarkvaraarendaja erialal</h2>
+            <div class="mina1_tekst"><h2>Minu nimi on Marten Saar, olen 16 aastane, elan Saaremaal, 
+                õpin Kuressaare Ametikoolis esimese kursuse õpilasena noorem tarkvaraarendaja erialal</h2>
               </div>
         </div>
 
