--- a/projektid.html
+++ b/projektid.html
@@ -13,11 +13,6 @@
 
     <div class="header_alus">
 
-        <div class="header_nimi_desc">
-            <h4>Marten Saar</h4>
-            <h4">Noorem <br> Tarkvaraarendaja</h4>
-        </div>
-
         <div class="header_pealkiri">
             <h3">Projektid</h3>
         </div>
@@ -29,11 +24,31 @@
 
     </div>
 
+    <div class="header_alus_desc">
+
+        <div class="header_nimi_desc">
+            <h4 style="font-size: 36px;">Marten Saar</h4>
+            <h4 style="font-size: 24px;">Noorem Tarkvaraarendaja</h4>
+        </div>
+
+        <div class="header_pealkiri_desc">
+            <h3>Projektid</h3>
+        </div>
+
+        <div class="header_nupud_desc">
+            <a href="index.html">Avaleht</a>
+            <a href="projektid.html">Projektid</a>
+        </div>
+
+    </div>
+
+    </div>
+
     <!-- Sisu -->
 
     <div class="sisu_projekt">
 
-        <h2 style="color: white;text-align: center;margin-top: 5%;">Kooli Projektid</h2>
+        <h2 class="links">Kooli Projektid</h2>
 
         <div class="kooli">
             <a class="projekt" href="SydMead.html"><h2>Portfoolio: Syd Mead</h2></a>
